# memorable-wordlist

./: .gitignore  Cargo.toml  README.md  aoa.txt  bad-words.txt  generate-memorable-wordlist.py  memorable-wordlist.js  memorable-wordlist.py
src/: lib.rs  words.rs
