[package]
name = "memorable-wordlist"
version = "0.1.6"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

description = "List of memorable words"
license = "MIT/Apache-2.0"
repository = "https://github.com/droundy/memorable-wordlist"

readme = "README.md"

[dependencies]
rand = "0.7.0"
